// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart snapShot testing renders LineChart correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_4"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone5"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_4"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_4"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine2"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID101"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle001"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle0011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-FocusZone
                  ms-OverflowSet
                  &:focus {
                    outline: none;
                  }
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              data-focuszone-id="FocusZone6"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_24"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone25"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_24"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_24"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine22"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID2101"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle2001"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle20011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            ms-OverflowSet
            &:focus {
              outline: none;
            }
            {
              display: flex;
              flex-wrap: wrap;
              justify-content: unset;
              position: relative;
            }
        data-focuszone-id="FocusZone26"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
        role="listbox"
      >
        <div
          className=
              ms-OverflowSet-item
              {
                display: inherit;
                flex-shrink: 0;
              }
        >
          <button
            aria-label="metaData1"
            aria-posinset={1}
            aria-selected={false}
            aria-setsize={1}
            className=

                {
                  align-items: center;
                  background: none;
                  border: none;
                  cursor: pointer;
                  display: flex;
                  outline: transparent;
                  padding-bottom: 8px;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 8px;
                  position: relative;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid transparent;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #605e5c;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                  outline-color: #605e5c;
                }
            data-is-focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="option"
          >
            <div
              className=

                  {
                    background-color: red;
                    background-image: ;
                    border-color: red;
                    border: 1px solid;
                    height: 12px;
                    margin-right: 8px;
                    opacity: ;
                    width: 12px;
                  }
                  @media screen and (-ms-high-contrast: active){& {
                    background-image: linear-gradient(to right, red, red);
                    opacity: ;
                  }
            />
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #323130;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    line-height: 16px;
                    opacity: ;
                  }
            >
              metaData1
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineChart snapShot testing renders hideLegend correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_11"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone12"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_11"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_11"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine9"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID801"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle701"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle7011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`LineChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_17"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone18"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_17"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_17"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine15"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID1401"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle1301"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle13011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-FocusZone
                  ms-OverflowSet
                  &:focus {
                    outline: none;
                  }
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              data-focuszone-id="FocusZone19"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineChart snapShot testing renders showXAxisLablesTooltip correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_31"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone32"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_31"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_31"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine29"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID2801"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle2701"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle27011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-FocusZone
                  ms-OverflowSet
                  &:focus {
                    outline: none;
                  }
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              data-focuszone-id="FocusZone33"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineChart snapShot testing renders wrapXAxisLables correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_38"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone39"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_38"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_38"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine36"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID3501"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle3401"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle34011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-FocusZone
                  ms-OverflowSet
                  &:focus {
                    outline: none;
                  }
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              data-focuszone-id="FocusZone40"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineChart snapShot testing renders yAxisTickFormat correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_45"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone46"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_45"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_45"
        transform="translate(40, 0)"
      />
      <g>
        <line
          id="verticalLine43"
          stroke="steelblue"
          strokeDasharray="5,5"
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
        <g>
          <line
            id="lineID4201"
            onClick={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            stroke="red"
            strokeLinecap="round"
            strokeWidth={4}
            x1={40}
            x2={-20}
            y1={-0.625}
            y2={20}
          />
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle4101"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle41011L"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            opacity={1}
            r={0.2}
            stroke="red"
            strokeWidth={3}
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-FocusZone
                  ms-OverflowSet
                  &:focus {
                    outline: none;
                  }
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              data-focuszone-id="FocusZone47"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
